--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
@@ -67,7 +67,7 @@ launcher.checkForUpdates=Check for updates
 launcher.options=Options...
 launcher.updateLauncher=Update launcher...
 launcher.downloadUpdates=Download modpack updates
-launcher.title=SKCraft Launcher (v{0})
+launcher.title=CullCraft Launcher (v{0}) built with SKCraft Launcher
 launcher.appTitle=SKCraft Launcher
 launcher.refreshList=Refresh list
 launcher.checkingTitle=Getting available modpacks...
@@ -117,8 +117,8 @@ console.pasteFailed=Upload failed\: {0}\n
 console.processEndCode=Process ended with code\: {0}
 console.attachedToProcess=The game is running. Please wait.
 console.forceClose=Force Close
-console.trayTooltip=SKCraft Launcher
-console.trayTitle=SKCraft Launcher
+console.trayTooltip=CullCraft Launcher
+console.trayTitle=CullCraft Launcher
 console.tray.showWindow=Show window
 console.tray.forceClose=Force close...
 console.closeWindow=Close Window
